fix: fix scripts path

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.5.0/annyang.min.js"></script>
+    <script src="https://cdn.rawgit.com/lmalave/aframe-speech-command-component/5859588e/dist/aframe-speech-command-component.min.js"></script>
 </head>
 <body>
     <a-scene>
@@ -43,5 +44,9 @@
         <a-entity id="annyang"
                   annyang-speech-recognition></a-entity>
     </a-scene>
+
+    <script type="application/javascript">
+        annyang.setLanguage('es-US')
+    </script>
 </body>
 </html>
