feat: add font to legend

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a-text value="Hey! How are you"
                 position="0 1.9 -1"
                 color="black"
+                font="mozillavr"
                 speech-command__text="command: change text; type: attribute; attribute: value; value: This is so fun!"></a-text>
         <a-entity id="cameraman"
                   position="0 0 4"
