fix: change language code

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </a-scene>
 
     <script type="application/javascript">
-        annyang.setLanguage('es-US')
+        annyang.setLanguage('en-US')
     </script>
 </body>
 </html>
