fix: fix color reference inside command

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     radius="0.5"
                     height="1.5"
                     color="#ffc65d"
-                    speech-command__color="command: change color; type: attribute; attribute: color; color: red;"></a-cylinder>
+                    speech-command__color="command: change color; type: attribute; attribute: color; value: red;"></a-cylinder>
         <a-plane position="0 0 -4"
                  rotation="-90 0 0"
                  width="4"
